--- a/package.json
+++ b/package.json
@@ -65,10 +65,10 @@
     "@types/classnames": "^2.2.3",
     "@types/react": "^16.8.6",
     "@types/react-dom": "^16.9.0",
-    "@typescript-eslint/eslint-plugin": "^2.3.0",
-    "@typescript-eslint/parser": "^2.3.0",
+    "@typescript-eslint/eslint-plugin": "2.5.0",
+    "@typescript-eslint/parser": "2.5.0",
     "@zarm-design/cli": "^0.0.9",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "10.0.3",
     "browserslist": "^4.6.6",
     "color": "^3.1.0",
     "concurrently": "^3.5.1",
@@ -81,13 +81,14 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.4.0",
-    "eslint": "^5.16.0",
-    "eslint-config-za": "^2.1.0-alpha.4",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.13.0",
-    "eslint-plugin-react-hooks": "^1.6.0",
+    "eslint": "6.5.1",
+    "eslint-config-za": "2.1.0",
+    "eslint-plugin-babel": "5.3.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.16.0",
+    "eslint-plugin-react-hooks": "2.2.0",
+    "eslint-plugin-vue": "5.2.3",
     "gh-pages": "^1.0.0",
     "highlight.js": "^9.12.0",
     "history": "^4.7.2",
@@ -106,7 +107,7 @@
     "rimraf": "^2.6.3",
     "stylelint": "^7.12.0",
     "stylelint-config-za": "^0.1.0",
-    "typescript": "^3.5.3"
+    "typescript": "3.6.4"
   },
   "lint-staged": {
     "components/**/*.{ts,tsx}": "eslint",
