--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "deploy": "npm run deploy:build && gh-pages -d assets",
     "lint:ts": "eslint --ext .ts,.tsx components",
     "lint:js": "eslint --ext .js,.jsx site",
-    "lint:style": "stylelint **/*.scss --syntax scss",
+    "lint:style": "stylelint \"components/**/*.scss\" \"site/**/*.scss\" --syntax scss",
     "lint": "npm run lint:ts && npm run lint:js && npm run lint:style",
     "test": "rimraf coverage && cross-env TZ=America/New_York zarm test -s scripts/jest/setup.js -c",
     "coverage": "cat ./coverage/lcov.info | coveralls",
