--- a/package.json
+++ b/package.json
@@ -50,11 +50,11 @@
   "dependencies": {
     "async-validator": "^1.10.1",
     "classnames": "2.2.6",
-    "css-animation": "^1.2.5",
     "color": "^3.1.0",
+    "css-animation": "^1.2.5",
     "normalize.css": "8.0.1",
     "rc-animate": "^3.0.0-rc.5",
-    "zarm": "2.0.0-alpha.71"
+    "zarm": "2.0.0-alpha.72"
   },
   "devDependencies": {
     "@babel/standalone": "^7.0.0",
@@ -68,6 +68,7 @@
     "@typescript-eslint/parser": "2.5.0",
     "@zarm-design/cli": "^0.0.17",
     "babel-eslint": "10.0.3",
+    "babel-plugin-import": "^1.13.0",
     "browserslist": "^4.6.6",
     "concurrently": "^3.5.1",
     "conventional-changelog-cli": "^1.3.22",
