--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "css-animation": "^1.2.5",
     "normalize.css": "8.0.1",
     "rc-animate": "^3.0.0-rc.5",
-    "zarm": "2.0.0-beta.3"
+    "zarm": "2.2.0"
   },
   "devDependencies": {
     "@babel/standalone": "^7.0.0",
@@ -68,7 +68,7 @@
     "@types/react-dom": "^16.9.0",
     "@typescript-eslint/eslint-plugin": "2.5.0",
     "@typescript-eslint/parser": "2.5.0",
-    "@zarm-design/cli": "^0.0.18",
+    "@zarm-design/cli": "^0.0.20",
     "babel-eslint": "10.0.3",
     "babel-plugin-import": "^1.13.0",
     "browserslist": "^4.6.6",
