--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "css-animation": "^1.2.5",
     "normalize.css": "8.0.1",
     "rc-animate": "^3.0.0-rc.5",
+    "popper.js": "^1.15.0",
     "zarm": "2.3.3"
   },
   "devDependencies": {
